[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/SpaceMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Area/setting.png" type="Texture" id=2]
[ext_resource path="res://Pause.gd" type="Script" id=3]
[ext_resource path="res://assets/buttons/mainmenu_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/mainmenu_click.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/resume_base.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/resume_click.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/resume_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/restart_base.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/restart_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/restart_click.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/mainmenu_base.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/settings_base.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/settings_click.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/settings_hover.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
margin_right = 617.0
margin_bottom = 785.0
rect_pivot_offset = Vector2( 432, 24 )
script = ExtResource( 3 )

[node name="Pause" type="Sprite" parent="."]
position = Vector2( 300, 458.5 )
scale = Vector2( 0.624, 0.631 )
texture = ExtResource( 2 )

[node name="PauseLabel" type="Label" parent="."]
margin_left = 160.0
margin_top = 312.0
margin_right = 440.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 200.0
margin_top = 376.0
margin_right = 867.0
margin_bottom = 1050.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="ResumeButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 88.0
margin_right = 578.0
margin_bottom = 140.0
rect_min_size = Vector2( 490, 140 )
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true

[node name="RestartButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 68.0
margin_top = 178.0
margin_right = 598.0
margin_bottom = 318.0
rect_min_size = Vector2( 530, 140 )
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 53.0
margin_top = 356.0
margin_right = 613.0
margin_bottom = 486.0
rect_min_size = Vector2( 560, 130 )
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
expand = true

[node name="MainMenuButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 13.0
margin_top = 534.0
margin_right = 653.0
margin_bottom = 674.0
size_flags_horizontal = 4
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
